# rowscript

./: .gitignore  .prettierrc  Cargo.toml  LICENSE  README.md  go.mod  package-lock.json  package.json  rust-toolchain.toml
core/: Cargo.toml
core/prelude/: 00_type.rows  01_builtin.rows  02_collection.rows  04_reflect.rows  array.rows  builtins.rows  console.rows  everyday.rows  index.rows  op.rows  reflect.rows  xx_console.rows  xx_effect.rows  xx_json.rows  xx_string.rows  xx_time.rows
core/src/: lib.rs  tests.rs
core/src/abs/: data.rs
core/src/base/: mod.rs
core/src/codegen/: ecma.rs  es6.rs  mod.rs  noop.rs
core/src/conc/: data.rs
core/src/prelude/: builtin.rows  collection.rows  console.rows  effect.rows  json.rows  mod.rs  op.rows  reflect.rows  string.rows  testing.rows  type.rows
core/src/surf/: mod.rs  rows.pest  tests.rs
core/src/tests/: mod.rs
core/src/tests/example_eertree/: mod.rs
core/src/tests/example_fact/: index.rows  mod.rs
core/src/tests/example_minesweeper/: index.rows  mod.rs
core/src/tests/example_nqueens/: index.rows  mod.rs
core/src/tests/example_phi/: ffi.mjs  index.rows  mod.rs
core/src/tests/fail_hole/: index.rows  mod.rs
core/src/tests/fail_issue114/: index.rows  mod.rs
core/src/tests/fail_issue134/: index.rows  mod.rs
core/src/tests/fail_issue155/: index.rows  mod.rs
core/src/tests/fail_issue160/: index.rows  mod.rs
core/src/tests/fail_parse/: mod.rs
core/src/tests/fail_reserved/: index.rows  mod.rs
core/src/tests/fail_resolve/: index.rows  mod.rs
core/src/tests/ok_alias/: index.rows  mod.rs
core/src/tests/ok_alias_recur/: index.rows  mod.rs
core/src/tests/ok_array/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_array_iter/: index.rows  mod.rs
core/src/tests/ok_async/: index.rows  mod.rs
core/src/tests/ok_auto_implements/: index.rows  mod.rs
core/src/tests/ok_bool/: index.rows  mod.rs
core/src/tests/ok_builtin/: index.rows  mod.rs  rand.mjs
core/src/tests/ok_capabilities/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_chainable/: index.rows  mod.rs
core/src/tests/ok_class/: index.rows  log.mjs  mod.rs
core/src/tests/ok_class_associated/: index.rows  log.mjs  mod.rs
core/src/tests/ok_class_default/: index.rows  mod.rs
core/src/tests/ok_class_generics/: index.rows  mod.rs
core/src/tests/ok_class_helper/: hello.mjs  index.rows  mod.rs
core/src/tests/ok_class_interface/: index.rows  log.mjs  mod.rs
core/src/tests/ok_class_poly/: index.rows  mod.rs
core/src/tests/ok_class_wrapper/: index.rows  mod.rs
core/src/tests/ok_const/: index.rows  mod.rs
core/src/tests/ok_ctl/: index.rows  mod.rs
core/src/tests/ok_enum/: data.mjs  index.rows  mod.rs
core/src/tests/ok_enum_default/: index.rows  mod.rs
core/src/tests/ok_enum_rowpoly/: index.rows  mod.rs
core/src/tests/ok_enum_unionify/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_enum_upto/: index.rows  mod.rs
core/src/tests/ok_fn/: index.rows  mod.rs
core/src/tests/ok_fn_mutual/: index.rows  mod.rs
core/src/tests/ok_fn_recur/: index.rows  mod.rs
core/src/tests/ok_fori/: index.rows  mod.rs
core/src/tests/ok_forof/: index.rows  mod.rs
core/src/tests/ok_hole/: index.rows  mod.rs
core/src/tests/ok_implements/: index.rows  mod.rs
core/src/tests/ok_implicit/: mod.rs
core/src/tests/ok_implicit_named/: index.rows  mod.rs
core/src/tests/ok_implicit_unnamed/: index.rows  mod.rs
core/src/tests/ok_instanceof/: index.rows  mod.rs
core/src/tests/ok_interface/: index.rows  mod.rs
core/src/tests/ok_interface_stuck/: index.rows  mod.rs
core/src/tests/ok_interface_suspended/: index.rows  mod.rs
core/src/tests/ok_issue101/: index.rows  mod.rs
core/src/tests/ok_issue104/: index.rows  mod.rs
core/src/tests/ok_issue127/: index.rows  log.mjs  mod.rs
core/src/tests/ok_issue135/: index.rows  mod.rs
core/src/tests/ok_issue158/: index.rows  mod.rs
core/src/tests/ok_issue159/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_issue75/: index.rows  mod.rs
core/src/tests/ok_issue78/: index.rows  mod.rs
core/src/tests/ok_issue93/: index.rows  mod.rs
core/src/tests/ok_json_encode/: index.rows  mod.rs
core/src/tests/ok_map/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_map_iter/: index.rows  mod.rs
core/src/tests/ok_modsys/: index.rows  mod.rs
core/src/tests/ok_mut/: index.rows  mod.rs
core/src/tests/ok_namespace/: index.rows  mod.rs
core/src/tests/ok_num_add/: index.rows  mod.rs
core/src/tests/ok_object/: index.rows  mod.rs
core/src/tests/ok_object_assign/: index.rows  mod.rs
core/src/tests/ok_object_concat/: index.rows  mod.rs
core/src/tests/ok_object_rowpoly/: index.rows  mod.rs
core/src/tests/ok_oop/: index.rows  mod.rs
core/src/tests/ok_oop_access/: index.rows  log.mjs  mod.rs
core/src/tests/ok_oop_generics/: index.rows  mod.rs
core/src/tests/ok_oop_init/: index.rows  log.mjs  mod.rs
core/src/tests/ok_oop_vtbl/: index.rows  mod.rs
core/src/tests/ok_op/: index.rows  mod.rs
core/src/tests/ok_postulate/: mod.rs
core/src/tests/ok_postulate_fn/: ffi.mjs  h.mjs  index.rows  mod.rs
core/src/tests/ok_postulate_type/: index.rows  mod.rs
core/src/tests/ok_prelude_join/: index.rows  mod.rs
core/src/tests/ok_prelude_json/: index.rows  mod.rs
core/src/tests/ok_prelude_lower/: index.rows  mod.rs
core/src/tests/ok_reflect/: index.rows  mod.rs
core/src/tests/ok_reflected/: index.rows  mod.rs
core/src/tests/ok_rev_app/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_rowpoly/: index.rows  mod.rs
core/src/tests/ok_rowpoly_aedt/: index.rows
core/src/tests/ok_rowpoly_cont/: index.rows  mod.rs
core/src/tests/ok_str/: ffi.mjs  index.rows  mod.rs
core/src/tests/ok_time/: mod.rs  (+1 more)
core/src/theory/: mod.rs  rows.pest  surf.pest
crates/core/: Cargo.toml
crates/core/benches/: eval.rs  fibonacci.rows
crates/core/src/: lib.rs
crates/tree-sitter-rowscript/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
crates/tree-sitter-rowscript/src/: grammar.json  parser.c
(+155 files in other folders)
