[package]
name = "rowscript"
version = "0.1.0"
edition = "2018"
authors = ["RowScript developers"]
license = "MIT"
description = "RowScript programming language"
readme = ".github/README.md"
categories = ["development-tools"]
repository = "https://github.com/rowscript/rowscript"

[badges]
maintenance = { status = "Early stage" }

[dependencies]
clap = { version = "3.0.0-beta.4", optional = true }

[workspace]
members = [
    "packages/rowscript-core",
    "packages/rowscript-compiler"
]
