[package]
name = "rowscript"
version = "0.1.0"
edition = "2021"
authors = ["RowScript developers"]
license = "MIT"
description = "RowScript programming language"
readme = ".github/README.md"
categories = ["development-tools"]
repository = "https://github.com/rowscript/rowscript"

[badges]
maintenance = { status = "Early stage" }

[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1.0.45"
log = "0.4"
env_logger = "0.9.0"
rowscript-compiler = { path = "packages/rowscript-compiler" }

[workspace]
members = [
    "packages/rowscript-compiler",
    "packages/rowscript-core",
    "packages/rowscript-grammar"
]
