[package]
name = "rowscript-core"
version = "1.0.0-alpha.5"
edition = "2021"

[dependencies.thiserror]
version = "2.0.0"

[dependencies.ariadne]
version = "0.5.0"

[dependencies.stacker]
version = "0.1.17"

[dependencies.log]
version = "0.4.22"

[dependencies.pest]
version = "2.7.14"

[dependencies.pest_derive]
version = "2.7.14"

[dependencies]
swc_ecma_parser = { version = "5.0.0" }
swc_ecma_ast = { version = "4.0.1" }
swc_ecma_codegen = { version = "4.0.1" }
swc_atoms = { version = "2.0.0" }
swc_common = { version = "4.0.0", features = ["tty-emitter"] }
swc_allocator = { version = "1.0.0", default-features = false }
num-bigint = { version = "0.4.6" }
serde_json = { version = "1.0.133" }
