[package]
name = "rowscript-core"
version = "1.0.0-alpha.5"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies.thiserror]
version = "2.0.12"

[dependencies.ariadne]
version = "0.5.1"

[dependencies.stacker]
version = "0.1.20"

[dependencies.log]
version = "0.4.27"

[dependencies.pest]
version = "2.7.15"

[dependencies.pest_derive]
version = "2.7.15"

[dependencies]
swc_ecma_parser = { version = "11.0.0" }
swc_ecma_ast = { version = "8.1.0" }
swc_ecma_codegen = { version = "8.1.0" }
swc_atoms = { version = "5.0.0" }
swc_common = { version = "8.0.1", features = ["tty-emitter"] }
num-bigint = { version = "0.4.6" }
serde_json = { version = "1.0.140" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.99"
