[package]
name = "rowscript-core"
version = "1.0.0-alpha.6"
edition = "2024"

[dependencies]
rowscript-derive = { path = "../derive" }
strum = { version = "0.27.2", features = ["derive"] }
ustr = "1.1.0"
serde_json = "1.0.145"
chumsky = { version = "1.0.0-alpha.8", features = ["pratt"] }
cranelift = "0.126.1"
cranelift-native = "0.126.1"
cranelift-module = "0.126.1"
cranelift-jit = "0.126.1"
object = { version = "0.38.0", features = ["write", "read"] }
target-lexicon = "0.13.3"
wasmtime-internal-jit-debug = { version = "39.0.1", features = ["std", "gdb_jit_int"] }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "eval"
harness = false
